Changes in @NEW@:
  o Client Changes:
    * Added support for getFileContents call to ShimNetClient (CNY-1669)

  o Internal Changes:
    * More of the file installation path was moved into C for improved
      performance
    * Added misc.pack() and use it to freeze TroveRefsFilesStream and
      StreamCollection objects
    * Initial step of promote takes advantage of weak references to avoid
      downloading so many packages (CNY-1867)
    * The shim network client now supports CONARY_CLIENT_LOG environment
      variable

Changes in 2.0.23:
  o New Features:
    * A new commitaction module that logs to a database the results of
      all commits in to a repository has been added as logaction.py 
      (CNY-2814, CNY-2849)
    * Some trove sources now deal better with being passed a trove name
      of None when using findTroves. (CNY-2923)
    * Added --replace-files, --replace-modified-files, replace-config-files,
      --replace-managed-files to updateall. (CNY-2512)

  o Build Changes:
    * Promote now uses the source trove for packages to determine the
      source trove for components instead of downloading the components
      themselves. (CNY-1867)
    * Promote no longer uses getTroves() to look up clone history; it uses
      getTroveInfo() instead. This provides a significant performance
      improvement as well as a significant RAM savings. (CNY-1867)
    * Checking for recloning (due to changes in referenced trove sets) now
      skips components, improving promote performance. (CNY-1867)
    * The file contents of dpkg .deb files can now be extracted by
      r.addArchive() (CNY-2926)
    * Conary now provides python: dependencies during incompatible
      cross-builds. (CNY-2914)
    * The Transient policy now follows packaging instead of walking
      the filesystem, avoiding inconsistencies caused by side effects
      of other policies. (CNY-2939)
    * When bootstrapping a python that is unable to load the pydeps